--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -10,11 +10,21 @@
     <height>450</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>StackedWidget</string>
   </property>
-  <widget class="QWidget" name="page"/>
-  <widget class="QWidget" name="page"/>
+  <property name="currentIndex">
+   <number>2</number>
+  </property>
+  <widget class="QWidget" name="welcomePage"/>
+  <widget class="QWidget" name="backupPage"/>
+  <widget class="QWidget" name="restorePage"/>
  </widget>
  <resources/>
  <connections/>
