--- a/src/backupinitializationwidget.ui
+++ b/src/backupinitializationwidget.ui
@@ -51,16 +51,16 @@
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QCheckBox" name="checkBox">
+      <widget class="QCheckBox" name="thunderbirdInstanceCB">
        <property name="text">
-        <string>CheckBox</string>
+        <string>No active Thunderbird instance.</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="checkBox_2">
+      <widget class="QCheckBox" name="profileFoundCB">
        <property name="text">
-        <string>CheckBox</string>
+        <string>Thunderbird profile found.</string>
        </property>
       </widget>
      </item>
