--- a/src/backupmainwindow.ui
+++ b/src/backupmainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>450</height>
+    <height>400</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -72,14 +72,14 @@ QGroupBox::title {
        <number>9</number>
       </property>
       <item row="0" column="0">
-       <widget class="QCheckBox" name="checkBox">
+       <widget class="QCheckBox" name="profileCheckBox">
         <property name="text">
          <string>Profile</string>
         </property>
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QCheckBox" name="checkBox_2">
+       <widget class="QCheckBox" name="dataCheckBox">
         <property name="text">
          <string>Data</string>
         </property>
